--- a/Styles/site_css.css
+++ b/Styles/site_css.css
@@ -14,6 +14,7 @@ nav
 	height: 8vh;
 	background-color: #ABD7E4;
 	font-family: 'Poppins', sans-serif;
+	z-index: 2;
 }
 
 .logo
@@ -29,6 +30,8 @@ nav
 	display: flex;
 	justify-content: space-around;
 	width: 60%;
+	position: relative;
+	z-index: 2;
 }
 
 .nav-links li
